--- a/.github/workflows/proto_checks.yml
+++ b/.github/workflows/proto_checks.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           go get github.com/golang/protobuf/protoc-gen-go
           go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
+          export PATH="$PATH:$(go env GOPATH)/bin"
       - name: Generating protos
         run: |
           protoc --proto_path=api/$PROTO_DIR api/$PROTO_DIR/proto/*.proto --go_out=api/$PROTO_DIR/protobuf --go-grpc_out=api/$PROTO_DIR/protobuf
